--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <P>HELLO WORD</P>
+    <div>
+        <P>HELLO WORD</P>
+    </div>
+    
 </body>
 </html>
